# esp-rs-idf-poc

./: .gitignore  CMakeLists.txt  Cargo.toml  diagram.json  rust-toolchain.toml  sdkconfig  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
components/binds/: CMakeLists.txt
components/binds/src/: main.c  main.h
components/rust-esp-rs-idf-poc/: CMakeLists.txt  Cargo.toml  rust-toolchain.toml
components/rust-esp-rs-idf-poc/.cargo/: config.toml
components/rust-esp-rs-idf-poc/src/: lib.rs
components/ui/: Cargo.toml  build.rs
components/ui/src/: hello.slint  lib.rs
