[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.7.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }

[build-dependencies]
slint-build = "1.7.2"
